# ppm

./: .docker-builder  Cargo.toml  ChangeLog.md  DEV.md  LICENSE  README.md  TODO.md  cliff.toml
.gitea/workflows/: main.yaml  main.yml
.github/workflows/: gh-pages.yml  main.yaml  main.yml  release.yml
.zed/: debug.json
data/: Dockerfile  config.schema.json  test-config.yml  test-logger-config.yml  test-watcher-config.yml
docs/: file_monitoring.md  scheduling.md
examples/: Dockerfile  Dockerfile_package  docker-compose.yaml  docker-compose_standalone.yaml
src/: cmdline.rs  daemon.rs  launcher.rs  lib.rs  main.rs  monitor.rs  service.rs  utils.rs
src/cmdline/: client.rs  server.rs
src/cmdline/client/: client_log_tracker.rs  fileset.rs  tail_reader.rs
src/monitor/: logger.rs  scheduler.rs  sysinfo.rs  watch.rs  watcher.rs
src/monitor/logger/: auto_date.rs  logfile.rs  logpump.rs
src/monitor/watcher/: fsevents.rs  inotify.rs  linux.rs  unix.rs
src/service/: command.rs  info.rs  stats.rs  status.rs  tabled.rs  watch.rs
src/utils/: buffer.rs  debug.rs  globset.rs  lazy_bool.rs  libc.rs  mktemp.rs  poller.rs  serde_utils.rs  serializers.rs  signal.rs  slices.rs  tabled.rs  test_utils.rs  thread_builder.rs  thread_pool_old.rs  tracing_utils.rs
src/utils/libc/: fcntl.rs
src/utils/serde_utils/: one_or_many.rs
src/utils/serializers/: human.rs  instant.rs  service_dashmap.rs  tabled.rs
src/utils/signal/: macos.rs  posix.rs
tests/: client.rs  schema.rs  utils.rs
tests/utils/: mktemp.rs  mod.rs
website/: package-lock.json  package.json  rspress.config.ts
website/docs/: _meta.json  about.mdx  index.css  index.md  log_rotate.md  resource_usage.md  scheduling.md  server_traces.md
website/docs/doc/: _meta.json  changelog.mdx  file_monitoring.md  log_rotate.md  resource_usage.md  scheduling.md  server_traces.md
website/docs/doc/img/: README.md  log.cast  stats.cast  traces.cast
website/docs/quick_start/: _meta.json  configuration.md  installation.md  usage.md
